[gd_scene load_steps=39 format=2]

[ext_resource path="res://sprites/Menu/Background Layer 2.png" type="Texture" id=1]
[ext_resource path="res://sprites/Menu/Background Layer 1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Backgrounds/Blue Forest/Layer 5.png" type="Texture" id=3]
[ext_resource path="res://sprites/Lighting/APfkB6p - Imgur.png" type="Texture" id=4]
[ext_resource path="res://sprites/Lighting/White Square.png" type="Texture" id=5]
[ext_resource path="res://fonts/IndieFlower-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://tilesets/default tileset.tres" type="TileSet" id=7]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=8]
[ext_resource path="res://sound effects/Hover Button.wav" type="AudioStream" id=9]
[ext_resource path="res://sprites/Menu/Slider Grabber.png" type="Texture" id=10]
[ext_resource path="res://sprites/Menu/Slider Grabber Hover.png" type="Texture" id=11]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=12]
[ext_resource path="res://scripts/Start Screen.gd" type="Script" id=13]
[ext_resource path="res://sprites/Branding/Regular_triangle.png" type="Texture" id=14]
[ext_resource path="res://fonts/Nunito-Bold.ttf" type="DynamicFontData" id=15]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 150 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 150 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 256, 150 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.592157, 0.592157, 0.592157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.592157, 0.592157, 0.592157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.305882, 0.305882, 0.305882, 0.521569 )
border_width_top = 3
border_width_bottom = 3
border_color = Color( 0.305882, 0.305882, 0.305882, 0.521569 )
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[sub_resource type="DynamicFont" id=14]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=13]
HSlider/icons/grabber = ExtResource( 10 )
HSlider/icons/grabber_highlight = ExtResource( 11 )
HSlider/styles/grabber_area = SubResource( 15 )
HSlider/styles/grabber_area_highlight = SubResource( 17 )
HSlider/styles/slider = SubResource( 16 )
Label/fonts/font = SubResource( 14 )

[sub_resource type="DynamicFont" id=18]
size = 150
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=19]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=23]
size = 110
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=27]
resource_name = "Fade Out"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=26]
resource_name = "Load Brand"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Branding/Sprite3:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 582.737, 194.223 ), Vector2( 582.737, 194.223 ), Vector2( 582.737, 259.91 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Branding/Sprite3:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 45.0, 45.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Branding/Sprite:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 439.919, 234.313 ), Vector2( 439.919, 234.313 ), Vector2( 439.919, 300 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Branding/Sprite:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 45.0, 45.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Branding/Sprite2:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 338.03, 267.74 ), Vector2( 338.03, 333.427 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Branding/Sprite2:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Branding/Label:modulate")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Branding/Sprite2:modulate")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.141176, 0.439216, 0.454902, 0 ), Color( 0.141176, 0.439216, 0.454902, 0.654902 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Branding/Sprite:modulate")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.317647, 0.705882, 0.690196, 0 ), Color( 0.317647, 0.705882, 0.690196, 0 ), Color( 0.317647, 0.705882, 0.690196, 0.737255 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Branding/Sprite3:modulate")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.529412, 0.996078, 0.941176, 0 ), Color( 0.529412, 0.996078, 0.941176, 0 ), Color( 0.529412, 0.996078, 0.941176, 0.737255 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Branding/Label:rect_position")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 278.485, 434.377 ), Vector2( 278.485, 434.377 ), Vector2( 278.485, 379.673 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Branding:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=24]
resource_name = "Load Disclaimer"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Disclaimer Sign:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Disclaimer Sign/RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Menu" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 8 )

[node name="Background" type="Control" parent="CanvasLayer"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Sprite" parent="CanvasLayer/Background"]
pause_mode = 2
position = Vector2( 511.182, 300.882 )
scale = Vector2( 4, 4 )
z_index = 1
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/Background"]
pause_mode = 2
position = Vector2( 511.182, 300.882 )
scale = Vector2( 4, 4 )
z_index = 1
frames = SubResource( 5 )
frame = 3
speed_scale = 2.0
playing = true

[node name="Sprite" type="Sprite" parent="CanvasLayer/Background"]
pause_mode = 2
position = Vector2( 450.115, 300.869 )
scale = Vector2( 3.11827, 3.11827 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Background"]
pause_mode = 2
position = Vector2( 1346.78, 300.869 )
scale = Vector2( 3.11827, 3.11827 )
texture = ExtResource( 3 )

[node name="Effects" type="Node2D" parent="CanvasLayer/Background"]
pause_mode = 2

[node name="Light2D" type="Light2D" parent="CanvasLayer/Background/Effects"]
pause_mode = 2
position = Vector2( 221.357, 400.788 )
z_index = 2
texture = ExtResource( 4 )

[node name="Shadow" type="Sprite" parent="CanvasLayer/Background/Effects"]
pause_mode = 2
modulate = Color( 0.133333, 0.133333, 0.133333, 0.45098 )
position = Vector2( 512.524, 298.264 )
scale = Vector2( 33.0327, 19.6415 )
texture = ExtResource( 5 )

[node name="Menu" type="Control" parent="CanvasLayer"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -323.247, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Menu"]
pause_mode = 2
margin_left = 401.458
margin_top = 4.13278
margin_right = 1016.46
margin_bottom = 132.133
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
custom_fonts/font = SubResource( 6 )
text = "Generation 142"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu"]
pause_mode = 2
margin_left = 777.751
margin_top = 179.445
margin_right = 1003.75
margin_bottom = 625.445
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
pause_mode = 2
margin_right = 226.0
margin_bottom = 74.0
custom_colors/font_color_disabled = Color( 0.439216, 0.439216, 0.439216, 0.317647 )
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.423529, 0.423529, 0.423529, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Continue"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
pause_mode = 2
margin_top = 94.0
margin_right = 226.0
margin_bottom = 168.0
custom_colors/font_color_disabled = Color( 0.439216, 0.439216, 0.439216, 0.317647 )
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.423529, 0.423529, 0.423529, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 11 )
text = "New Game"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
pause_mode = 2
margin_top = 188.0
margin_right = 226.0
margin_bottom = 262.0
custom_colors/font_color_disabled = Color( 0.439216, 0.439216, 0.439216, 0.317647 )
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.423529, 0.423529, 0.423529, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 11 )
text = "Settings"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
pause_mode = 2
margin_top = 282.0
margin_right = 226.0
margin_bottom = 356.0
custom_colors/font_color_disabled = Color( 0.439216, 0.439216, 0.439216, 0.317647 )
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.423529, 0.423529, 0.423529, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 11 )
text = "Quit"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="CanvasLayer"]
pause_mode = 2
margin_left = 782.881
margin_right = 822.881
margin_bottom = 40.0
rect_pivot_offset = Vector2( -323.247, 20 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Settings"]
pause_mode = 2
margin_left = 401.0
margin_top = 4.0
margin_right = 1016.0
margin_bottom = 159.0
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
custom_fonts/font = SubResource( 6 )
text = "Settings"
align = 2
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings"]
pause_mode = 2
margin_left = 712.161
margin_top = 176.081
margin_right = 1014.16
margin_bottom = 622.081
theme = SubResource( 13 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Settings/VBoxContainer"]
pause_mode = 2
margin_right = 301.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
text = "Music"
align = 2

[node name="Music Slider" type="HSlider" parent="CanvasLayer/Settings/VBoxContainer"]
pause_mode = 2
margin_top = 55.0
margin_right = 301.0
margin_bottom = 87.0
min_value = -80.0
max_value = 0.0

[node name="Label2" type="Label" parent="CanvasLayer/Settings/VBoxContainer"]
pause_mode = 2
margin_top = 97.0
margin_right = 301.0
margin_bottom = 142.0
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
text = "Sound Effects"
align = 2

[node name="Sound Slider" type="HSlider" parent="CanvasLayer/Settings/VBoxContainer"]
pause_mode = 2
margin_top = 152.0
margin_right = 301.0
margin_bottom = 184.0
min_value = -80.0
max_value = 0.0

[node name="Back" type="Button" parent="CanvasLayer/Settings/VBoxContainer"]
pause_mode = 2
margin_top = 194.0
margin_right = 301.0
margin_bottom = 268.0
custom_colors/font_color_disabled = Color( 0.439216, 0.439216, 0.439216, 0.317647 )
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.423529, 0.423529, 0.423529, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 11 )
text = "Back"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start Screen" type="Control" parent="CanvasLayer"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Start Screen"]
pause_mode = 2
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 512.78, 305.125 )
scale = Vector2( 33.3798, 20.269 )
z_index = 2
texture = ExtResource( 5 )

[node name="Disclaimer Sign" type="Node2D" parent="CanvasLayer/Start Screen"]
pause_mode = 2
visible = false
z_index = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Start Screen/Disclaimer Sign"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 97.0
margin_right = 1024.0
margin_bottom = 601.0
custom_fonts/bold_font = SubResource( 18 )
custom_fonts/normal_font = SubResource( 19 )
bbcode_enabled = true
bbcode_text = "
[center]This game is not meant to be played on the web. It is recommended for you to download the game. If you wish to continue, please be aware of some performance issues.[/center]"
text = "
This game is not meant to be played on the web. It is recommended for you to download the game. If you wish to continue, please be aware of some performance issues."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Branding" type="Node2D" parent="CanvasLayer/Start Screen"]
pause_mode = 2
visible = false
z_index = 2

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Start Screen/Branding"]
modulate = Color( 0.141176, 0.439216, 0.454902, 0 )
position = Vector2( 338.03, 267.74 )
rotation = 0.785398
scale = Vector2( 0.434059, 0.434059 )
texture = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Start Screen/Branding"]
modulate = Color( 0.317647, 0.705882, 0.690196, 0 )
position = Vector2( 439.919, 234.313 )
rotation = 0.785398
scale = Vector2( 0.660589, 0.660589 )
texture = ExtResource( 14 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Start Screen/Branding"]
modulate = Color( 0.529412, 0.996078, 0.941176, 0 )
position = Vector2( 582.737, 194.223 )
rotation = 0.785398
scale = Vector2( 0.932313, 0.932313 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="CanvasLayer/Start Screen/Branding"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 278.485
margin_top = 434.377
margin_right = 774.485
margin_bottom = 599.378
custom_fonts/font = SubResource( 23 )
text = "ZenoDev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Start Screen"]
"anims/Fade Out" = SubResource( 27 )
"anims/Load Brand" = SubResource( 26 )
"anims/Load Disclaimer" = SubResource( 24 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer"]
pause_mode = 2
stream = ExtResource( 9 )

[node name="Tween" type="Tween" parent="CanvasLayer"]
pause_mode = 2

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 7, 0 )
z_index = 2
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131073, 3, 0, -65538, 3, 0, -131072, 3, 0, -2, 3, 0, -65536, 3, 0, 65534, 3, 0, 0, 3, 0, 131071, 3, 0 )

[connection signal="button_down" from="CanvasLayer/Menu/VBoxContainer/Continue" to="CanvasLayer" method="_on_Continue_button_down"]
[connection signal="button_down" from="CanvasLayer/Menu/VBoxContainer/New Game" to="CanvasLayer" method="_on_New_Game_button_down"]
[connection signal="button_down" from="CanvasLayer/Menu/VBoxContainer/Settings" to="CanvasLayer" method="_on_Settings_button_down"]
[connection signal="button_down" from="CanvasLayer/Menu/VBoxContainer/Quit" to="CanvasLayer" method="_on_Quit_button_down"]
[connection signal="value_changed" from="CanvasLayer/Settings/VBoxContainer/Music Slider" to="CanvasLayer/Settings" method="_on_Music_Slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Settings/VBoxContainer/Sound Slider" to="CanvasLayer/Settings" method="_on_Sound_Slider_value_changed"]
[connection signal="button_down" from="CanvasLayer/Settings/VBoxContainer/Back" to="CanvasLayer" method="_on_Back_button_down"]
